added font and picture

--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class = 'conatiner'>
     <section class = 'all header'>
-      <div>
+      <div class = 'header-info'>
         <h1>Shannon Reed</h1>
         <span>srtech5set@gmail.com | 619-289-0601</span><br>
-        <h5>Lorem ipsum dolor sit amet<br>
-            cum quot aliquam commune an,<br>
-            ex duis consulatu eum. 
+        <h5>Trained Web Developer who learns fast and can adpat to<br> any
+            working enviorment. Experienced in modifying and<br> creating
+            website contents using some of the most<br> popuplar languages
+            and libraries. I like to use my skills to<br> create unique layouts
+           with clean and esay to read code.
         </h5>
+       </div>
+       <div class = 'mypic'>
+         <img src = 'images/mypic.jpg' alt = 'Shannon'>
        </div>
 
         <div class = 'nav'>
