added photo and fonts, changed background styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class = 'header-info'>
         <h1>Shannon Reed</h1>
         <span>srtech5set@gmail.com | 619-289-0601</span><br>
-        <h5>Trained Web Developer who learns fast and can adpat to<br> any
-            working enviorment. Experienced in modifying and<br> creating
+        <h5>I am a Software Engineer, who learns fast and can adpat <br>to any
+            working enviorment. Experienced in modifying<br> and creating
             website contents using some of the most<br> popuplar languages
             and libraries. I like to use my skills to<br> create unique layouts
            with clean and esay to read code.
@@ -34,8 +34,8 @@
               <a href = "#experience"><span>Experience</span></a>
               <a href = "#education"><span>Education</span></a>
               <a href = "#contact"><span>Contact</span></a>
-              <a href = "#"><span>LinkedIn</span></a>
-              <a href = "#"><span>Github</span></a>
+              <a href = "https://www.linkedin.com/in/shannonreedtechset5/"><span>LinkedIn</span></a>
+              <a href = "https://github.com/shanreed"><span>Github</span></a>
               <a href = "#"><span>Portfolio</span></a>
             </nav>
         </div>
@@ -45,42 +45,42 @@
             <h2>Skills</h2>
     <div class = 'skills'>
       <div class = 'box'>
-            <h3>SOFT SKILLS</h3>
+            <h3>Soft Skills</h3>
                 <ul>
                   <li>Teamwork</li>
                   <li>Problem Solving</li>
                   <li>Time Management</li>
                   <li>Patience</li>
-                  <li>Works Well Under Pressure</li>
-                  <li>Teamwork</li>
-                  <li>Problem Solving</li>
-                  <li>Time Management</li>
+                  <li>Leadership</li>
+                  <li>Multitasking</li>
+                  <li>Application Debugging</li>
+                  <li>Team Management</li>
                   <li>Patience</li>
                   <li>Works Well Under Pressure</li>
                 </ul>               
       </div>
           
       <div class = 'box'>
-            <h3>TECHNICAL SKILLS</h3>
+            <h3>Technicial Skills</h3>
                 <ul>
                   <li>HTML5</li>
-                  <li>CSS</li>
+                  <li>CSS3</li>
                   <li>LESS</li>
-                  <li>JavaScript</li>
+                  <li>Git</li>
                   <li>Sass</li>
-                  <li>HTML5</li>
-                  <li>CSS</li>
+                  <li>Java</li>
+                  <li>Something</li>
                   <li>LESS</li>
-                  <li>JavaScript</li>
-                  <li>Sass</li>
+                  <li>Excel</li>
+                  <li>Adobe PhotoShop</li>
                 </ul>
       </div>
       <div class = 'box'>
-          <h3>TECHNICAL SKILLS</h3>
+          <h3>Libraries</h3>
               <ul>
-                <li>HTML5</li>
-                <li>CSS</li>
-                <li>LESS</li>
+                <li>React.js</li>
+                <li>Node.js</li>
+                <li>SQL</li>
                 <li>JavaScript</li>
                 <li>Sass</li>
                 <li>HTML5</li>
@@ -91,15 +91,15 @@
               </ul>
     </div>
     <div class = 'box'>
-        <h3>TECHNICAL SKILLS</h3>
+        <h3>Languages</h3>
             <ul>
               <li>HTML5</li>
               <li>CSS</li>
               <li>LESS</li>
               <li>JavaScript</li>
               <li>Sass</li>
-              <li>HTML5</li>
-              <li>CSS</li>
+              <li>XML</li>
+              <li>XQuery</li>
               <li>LESS</li>
               <li>JavaScript</li>
               <li>Sass</li>
@@ -170,8 +170,8 @@
         <p><a href = 'https://shanreed.github.io/portfolio-website/#contact'>Click Here To Have Me Contact You</a></p>
       </div>
       <ul class = 'social-media'>
-          <li><i class="fa fa-github" style="font-size:48px;color:red"></i></li>
-          <li><i class="fa fa-linkedin-square" style="font-size:48px;color:red"></i></li>
+          <li><a href = "https://github.com/shanreed"><i class="fa fa-github" style="font-size:48px;color:red"></i></a></li>
+          <li><a href = "https://www.linkedin.com/in/shannonreedtechset5/"><i class="fa fa-linkedin-square" style="font-size:48px;color:red"></i></a></li>
           
       </ul>
     </section>
