started adding mobile styles

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
     <section class = 'all header'>
       <div class = 'header-info'>
         <h1>Shannon Reed</h1>
-        <span>srtech5set@gmail.com | 619-289-0601</span><br>
-        <h5>I am a Software Engineer, who learns fast and can adpat <br>to any
-            working enviorment. Experienced in modifying<br> and creating
-            website layouts using some of the most<br> popuplar languages
-            and libraries. I like to use my skills to<br> create unique layouts
+        <span>srtech5set@gmail.com | 619-289-0601</span>
+        
+            <img class = 'sp' src = 'images/mypic.jpg' alt = 'Shannon'>
+          
+        <p>I am a Software Engineer, who learns fast and can adpat to any
+            working enviorment. Experienced in modifying and creating
+            website layouts using some of the most popuplar languages
+            and libraries. I like to use my skills to create unique layouts
            with clean and esay to read code.
-        </h5>
+        </p>
        </div>
        <div class = 'mypic'>
          <img src = 'images/mypic.jpg' alt = 'Shannon'>
@@ -39,6 +42,14 @@
               <a href = "#"><span>Portfolio</span></a>
             </nav>
         </div>
+        <div class = 'mob-nav'>
+          <nav>
+            <a href = "#skills"><span>Skills</span></a>
+            <a href = "#experience"><span>Experience</span></a>
+            <a href = "#education"><span>Education</span></a>
+            <a href = "#contact"><span>Contact</span></a>
+          </nav>
+      </div>
     </section>
 
     <section id = 'skills' class = 'all skills-section'>
